--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Stack for sondayip.com",
   "author": "Sonda Yip",
   "scripts": {
-    "start": "parcel  serve --dist-dir docs/ src/pages/*.html src/pages/**/*.html",
+    "start": "parcel serve src/pages/*.html src/pages/**/*.html",
     "build": "rm -f -r docs/ && parcel build --dist-dir docs/ src/pages/*.html src/pages/**/*.html"
   },
   "devDependencies": {
